--- a/.classpath
+++ b/.classpath
@@ -14,20 +14,17 @@
 	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/parboiled-core-1.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/parboiled-java-1.1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/pegdown-1.2.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scala-compiler-2.11.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scala-library-2.11.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scala-parser-combinators_2.11-1.0.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scala-reflect-2.11.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scala-xml_2.11-1.0.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalacheck_2.11-1.12.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalaz-concurrent_2.11-7.1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalaz-core_2.11-7.1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalaz-effect_2.11-7.1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalaz-stream_2.11-0.5a.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scodec-bits_2.11-1.0.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/specs2_2.11-2.4.15.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/test-interface-1.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalatest_2.11-2.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scala-xml_2.11-1.0.2.jar" sourcepath="coreLibs/target/pack/lib.srcs/scala-xml_2.11-1.0.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalacheck_2.11-1.12.1.jar" sourcepath="coreLibs/target/pack/lib.srcs/scalacheck_2.11-1.12.1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalaz-concurrent_2.11-7.1.0.jar" sourcepath="coreLibs/target/pack/lib.srcs/scalaz-concurrent_2.11-7.1.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalaz-core_2.11-7.1.0.jar" sourcepath="coreLibs/target/pack/lib.srcs/scalaz-core_2.11-7.1.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalaz-effect_2.11-7.1.0.jar" sourcepath="coreLibs/target/pack/lib.srcs/scalaz-effect_2.11-7.1.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/specs2_2.11-2.4.15.jar" sourcepath="coreLibs/target/pack/lib.srcs/specs2_2.11-2.4.15-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/test-interface-1.0.jar" sourcepath="coreLibs/target/pack/lib.srcs/test-interface-1.0-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalatest_2.11-2.2.2.jar" sourcepath="coreLibs/target/pack/lib.srcs/scalatest_2.11-2.2.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scalaz-stream_2.11-0.6a.jar" sourcepath="coreLibs/target/pack/lib.srcs/scalaz-stream_2.11-0.6a-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="coreLibs/target/pack/lib/scodec-bits_2.11-1.0.4.jar"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
