--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,12 @@ cache:
 before_cache:
   # Tricks to avoid unnecessary cache updates
   - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
-  - find $HOME/.sbt -name "*.lock" -delete
+  - find $HOME/.sbt -name "*.lock" -delet
+
+addons:
+  apt:
+    packages:
+      - graphviz
 
 jdk:
 - oraclejdk8
