--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jpl-omf-schema-tables"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gov-nasa-jpl-imce-oml-tables"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gov.nasa.jpl.imce.omf.resolver"/>
 	<classpathentry kind="con" path="gov.nasa.jpl.magicdraw.CLASSPATH_LIB_CONTAINER/,lib/imce.third_party.other-scala/"/>
 	<classpathentry kind="output" path="target/scala-2.11/classes"/>
 </classpath>
