--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 # Use container-based infrastructure
+dist: trusty
 sudo: false
 
 # These directories are cached to S3 at the end of the build
@@ -23,7 +24,8 @@ jdk:
 language: scala
 
 scala:
-- 2.11.8
+- 2.11.12
+- 2.12.8
 
 script:
 - ./scripts/travis-build.sh
